--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -74,8 +74,8 @@
               <img src="{{ "images/contact/phone.svg" | absURL }}" alt="phone" />
             </div>
           </div>
-          <h4>Phone & Email</h4>
-          <p>{{ $address.phone }}<br>
+          <h4>Email</h4>
+          <p>
             <a href="mailto:{{ $address.email }}">{{ $address.email }}</a>
           </p>
 
