added formspree functionality

--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -113,7 +113,7 @@
           <h3>Contact Form</h3>
         </div>
         <div class="contact-form-input">
-          <form id="contact-form" action="{{ .Site.Params.formspreeURL }}" method="POST">
+          <form id="contact-form" action="{{ .Site.Params.formspreeURL }}" method="POST" enctype="multipart/form-data">
 
             <div class="form-row">
 
@@ -128,6 +128,9 @@
             <div class="form-group">
               <textarea class="form-control" id="message" rows="6" name="message" placeholder="Message"></textarea>
             </div>
+
+            <label for="upload"> Your file:</label>
+            <input type="file" name="upload">
 
             <div class="form-group">
               <div class="form-check small">
