--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -113,7 +113,7 @@
           <h3>Contact Form</h3>
         </div>
         <div class="contact-form-input">
-          <form id="contact-form" action="{{ .Site.Params.formspreeURL }}" method="POST" enctype="multipart/form-data">
+          <form id="contact-form" action="{{ .Site.Params.formspreeURL }}" accept-charset="utf-8" method="POST" enctype="multipart/form-data">
 
             <div class="form-row">
 
@@ -128,9 +128,11 @@
             <div class="form-group">
               <textarea class="form-control" id="message" rows="6" name="message" placeholder="Message"></textarea>
             </div>
-
-            <label for="upload"> Your file:</label>
-            <input type="file" name="upload">
+            
+            <div class="form-group">
+              <label for="upload"> Your file:</label>
+              <input type="file" name="upload">
+            </div>
 
             <div class="form-group">
               <div class="form-check small">
@@ -144,40 +146,6 @@
             <button type="submit" class="btn btn-primary btn-zoom" id="contact-form-button">Send Message</button>
             <p id="contact-form-status" class="mt-3"></p>
           </form>
-
-          <!-- <form>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="inputAddress">Address</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="form-group">
-              <label for="inputAddress2">Address 2</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                  I agree that my submitted data is being collected and
-                  stored.
-                </label>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
-          </form> -->
-
-
 
         </div>
       </div>
