--- a/layouts/portfolio/single.ru.html
+++ b/layouts/portfolio/single.ru.html
@@ -41,7 +41,7 @@
           </div>
           <div class="case-details-info-item">
             <h5>Дата</h5>
-            <p>{{ .PublishDate.Format "January 2, 2006" }}</p>
+            <p>{{ .PublishDate.Format "2006-01-02" }}</p>
           </div>
         </div>
         <div class="row mb-5">
