--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-
+<!-- {{ partial "language-switcher.html" . }} -->
 {{ partial "hero.html" . }}
 
 {{ partial "aboutSection.html" . }}
