--- a/layouts/partials/blogSection.html
+++ b/layouts/partials/blogSection.html
@@ -1,5 +1,5 @@
 {{ with index .Site.Data.blogSection .Site.Language.Lang }}
-{{ range . }}}
+{{ range . }}
 
 <section class="section blog-preview" id="blog">
 	<div class="blog-preview__shape">
