--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -19,6 +19,7 @@
             class="nav-link text-dark text-sm-center p-2 {{ if $.IsHome }}scroll{{ end }}">{{ .Name }}</a>
         </li>
         {{ end }}
+        {{ partial "language-switcher.html" .}} 
       </ul>
       <div class="navbar-nav">
         <a href="{{ "en/contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
@@ -26,3 +27,4 @@
     </div>
   </div>
 </nav>
+
