--- a/layouts/partials/testimonialSection.html
+++ b/layouts/partials/testimonialSection.html
@@ -1,5 +1,5 @@
 {{ with index .Site.Data.testimonialSection .Site.Language.Lang }}
-{{ range . }}}
+{{ range . }}
 <section class="section testimonial">
     <div class="testimonial__background_shape">
         <svg viewBox="0 0 1920 79">
