--- a/layouts/partials/portfolioSection.ru.html
+++ b/layouts/partials/portfolioSection.ru.html
@@ -1,5 +1,5 @@
 {{ with index .Site.Data.portfolioSection .Site.Language.Lang }}
-{{ range . }}}
+{{ range . }}
 <section class="section portfolio" id="portfolio">
   <div class="container">
     <div class="row text-center">
