--- a/layouts/partials/resumeSection.html
+++ b/layouts/partials/resumeSection.html
@@ -1,5 +1,5 @@
 {{ with index .Site.Data.resumeSection .Site.Language.Lang }}
-{{ range . }}}
+{{ range . }}
 <section class="section resume" id="resume">
     <div class="resume__background"></div>
     <div class="container">
