--- a/layouts/partials/serviceSection.html
+++ b/layouts/partials/serviceSection.html
@@ -1,5 +1,5 @@
 {{ with index .Site.Data.serviceSection .Site.Language.Lang }}
-{{ range . }}}
+{{ range . }}
 <section class="section service" id="service">
     <div class="service__background">
         <svg viewBox="0 0 1283 1126">
