--- a/layouts/partials/skillSection.html
+++ b/layouts/partials/skillSection.html
@@ -1,5 +1,5 @@
 {{ with index .Site.Data.skillSection .Site.Language.Lang }}
-{{ range . }}}
+{{ range . }}
 <section class="section skill">
     <div class="skill__background_shape">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600">
