--- a/layouts/partials/blogSection.ru.html
+++ b/layouts/partials/blogSection.ru.html
@@ -28,7 +28,7 @@
 						<img src="{{ .Params.featureImage | absURL }}" alt="post-image">
 					</div>
 					<div class="blog-preview__item-content bg-white">
-						<span class="small">{{ .PublishDate.Format "January 2, 2006" }}</span>
+						<span class="small">{{ .PublishDate.Format "2006-01-02" }}</span>
 						<h5 class="mb-0">
 							<a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a>
 						</h5>
