--- a/layouts/contact/list.ru.html
+++ b/layouts/contact/list.ru.html
@@ -142,7 +142,7 @@
               </div>
             </div>
 
-            <button type="submit" class="btn btn-primary btn-zoom" id="contact-form-button">Send Message</button>
+            <button type="submit" class="btn btn-primary btn-zoom" id="contact-form-button">Отправить сообщение</button>
             <p id="contact-form-status" class="mt-3"></p>
           </form>
 
