--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -22,7 +22,7 @@
         {{ partial "language-switcher.html" .}} 
       </ul>
       <div class="navbar-nav">
-        <a href="{{ "en/contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
+        <a href="{{ "en/contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Get In Touch</a>
       </div>
     </div>
   </div>
