--- a/layouts/partials/navbar.ru.html
+++ b/layouts/partials/navbar.ru.html
@@ -22,7 +22,7 @@
         {{ partial "language-switcher.html" .}} 
       </ul>
       <div class="navbar-nav">
-        <a href="{{ "ru/contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Нанять меня</a>
+        <a href="{{ "ru/contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Связаться</a>
       </div>
     </div>
   </div>
